--- a/app/src/main/res/layout/activity_data_kecamatan.xml
+++ b/app/src/main/res/layout/activity_data_kecamatan.xml
@@ -7,6 +7,17 @@
     android:background="@drawable/background"
     tools:context=".DataKecamatan">
 
+    <include
+        layout="@layout/menu_atas"
+        android:layout_width="111dp"
+        android:layout_height="36dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline16"
+        app:layout_constraintEnd_toStartOf="@+id/guideline17"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.021" />
+
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="283dp"
@@ -24,9 +35,9 @@
         tools:ignore="ContentDescription" />
 
     <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="115dp"
-        android:layout_height="26dp"
+        android:id="@+id/spKecamatan"
+        android:layout_width="128dp"
+        android:layout_height="23dp"
         android:layout_marginStart="36dp"
         app:layout_constraintBottom_toBottomOf="@+id/txtPilihKecamatan"
         app:layout_constraintEnd_toStartOf="@+id/guideline14"
@@ -35,14 +46,13 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Spinner
-        android:id="@+id/spinner2"
-        android:layout_width="115dp"
+        android:id="@+id/spPotensi"
+        android:layout_width="128dp"
         android:layout_height="26dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="@+id/spinner"
-        app:layout_constraintStart_toStartOf="@+id/spinner"
-        app:layout_constraintTop_toTopOf="@+id/textView2"
-        />
+        app:layout_constraintEnd_toEndOf="@+id/spKecamatan"
+        app:layout_constraintStart_toStartOf="@+id/spKecamatan"
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/txtPilihKecamatan"
@@ -52,30 +62,30 @@
         android:text="Pilih Kecamatan"
         android:textAlignment="textStart"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline16"
         app:layout_constraintEnd_toStartOf="@+id/guideline17"
-        app:layout_constraintHorizontal_bias="0.756"
+        app:layout_constraintHorizontal_bias="0.76"
         app:layout_constraintStart_toStartOf="@+id/guideline13"
         app:layout_constraintTop_toTopOf="@+id/guideline15"
-        app:layout_constraintVertical_bias="0.756"
+        app:layout_constraintVertical_bias="0.619"
         tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="149dp"
-        android:layout_height="28dp"
+        android:layout_width="159dp"
+        android:layout_height="22dp"
         android:fontFamily="@font/arial"
         android:text="Pilih Potensi"
         android:textAlignment="textStart"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline16"
         app:layout_constraintEnd_toEndOf="@+id/txtPilihKecamatan"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/txtPilihKecamatan"
         app:layout_constraintTop_toBottomOf="@+id/txtPilihKecamatan"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.015"
         tools:ignore="HardcodedText" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -104,7 +114,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2" />
+        app:layout_constraintGuide_percent="0.22" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline17"
@@ -116,12 +126,38 @@
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="414dp"
-        android:layout_height="577dp"
+        android:layout_width="392dp"
+        android:layout_height="597dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline16"
         app:layout_constraintVertical_bias="1.0"
         tools:context=".MapDataKecamatan" />
+
+    <Button
+        android:id="@+id/btnPeta"
+        android:layout_width="148dp"
+        android:layout_height="32dp"
+        android:background="@color/goldenrot"
+        android:text="Tampilkan Peta"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/map"
+        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.361" />
+
+    <Button
+        android:id="@+id/btnPdf"
+        android:layout_width="145dp"
+        android:layout_height="32dp"
+        android:background="@color/goldenrot"
+        android:text="Data Detail"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/btnPeta"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline17"
+        app:layout_constraintTop_toTopOf="@+id/btnPeta" />
 </androidx.constraintlayout.widget.ConstraintLayout>
