--- a/app/src/main/res/layout/activity_data_kecamatan.xml
+++ b/app/src/main/res/layout/activity_data_kecamatan.xml
@@ -20,17 +20,17 @@
 
     <ImageView
         android:id="@+id/imageView8"
-        android:layout_width="283dp"
-        android:layout_height="44dp"
+        android:layout_width="258dp"
+        android:layout_height="31dp"
         android:layout_marginStart="44dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toTopOf="@+id/map"
         app:layout_constraintEnd_toStartOf="@+id/guideline14"
-        app:layout_constraintHorizontal_bias="0.137"
+        app:layout_constraintHorizontal_bias="0.304"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.25"
         app:srcCompat="@drawable/apik"
         tools:ignore="ContentDescription" />
 
@@ -65,10 +65,10 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline16"
         app:layout_constraintEnd_toStartOf="@+id/guideline17"
-        app:layout_constraintHorizontal_bias="0.76"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/guideline13"
         app:layout_constraintTop_toTopOf="@+id/guideline15"
-        app:layout_constraintVertical_bias="0.619"
+        app:layout_constraintVertical_bias="0.482"
         tools:ignore="HardcodedText" />
 
     <TextView
@@ -82,10 +82,10 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline16"
         app:layout_constraintEnd_toEndOf="@+id/txtPilihKecamatan"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/txtPilihKecamatan"
         app:layout_constraintTop_toBottomOf="@+id/txtPilihKecamatan"
-        app:layout_constraintVertical_bias="0.015"
+        app:layout_constraintVertical_bias="0.0"
         tools:ignore="HardcodedText" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -107,7 +107,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="848dp" />
+        app:layout_constraintGuide_end="764dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline16"
@@ -123,16 +123,17 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.50121653" />
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="392dp"
-        android:layout_height="597dp"
+        android:layout_width="405dp"
+        android:layout_height="602dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline16"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.0"
         tools:context=".MapDataKecamatan" />
 
     <Button
@@ -147,7 +148,8 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.361" />
+        app:layout_constraintVertical_bias="0.361"
+        tools:ignore="HardcodedText"/>
 
     <Button
         android:id="@+id/btnPdf"
@@ -159,5 +161,23 @@
         app:layout_constraintBottom_toBottomOf="@+id/btnPeta"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline17"
-        app:layout_constraintTop_toTopOf="@+id/btnPeta" />
+        app:layout_constraintTop_toTopOf="@+id/btnPeta"
+        tools:ignore="HardcodedText"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="514dp"
+        android:clickable="true"
+        android:onClick="utama"
+        app:backgroundTint="@color/aqua"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline17"
+        app:layout_constraintHorizontal_bias="0.069"
+        app:layout_constraintStart_toStartOf="@+id/guideline13"
+        app:layout_constraintTop_toTopOf="@+id/map"
+        app:layout_constraintVertical_bias="0.384"
+        app:srcCompat="@drawable/back"
+        android:focusable="true" />
 </androidx.constraintlayout.widget.ConstraintLayout>
