--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,8 +20,8 @@
 
     <Button
         android:id="@+id/btnUmum"
-        android:layout_width="132dp"
-        android:layout_height="158dp"
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_120sdp"
         android:background="@drawable/menu"
         android:onClick="potensi"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
@@ -34,8 +34,8 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="132dp"
-        android:layout_height="158dp"
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_120sdp"
         android:background="@drawable/menumenu"
         android:onClick="kecamatan"
         app:layout_constraintBottom_toBottomOf="@+id/btnUmum"
@@ -47,8 +47,8 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="132dp"
-        android:layout_height="158dp"
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_120sdp"
         android:background="@drawable/menumenumenu"
         android:onClick="kawasan"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
@@ -60,27 +60,26 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="262dp"
-        android:layout_height="75dp"
+        android:layout_width="@dimen/_262sdp"
+        android:layout_height="@dimen/_75sdp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.357"
+        app:layout_constraintVertical_bias="0.689"
         app:srcCompat="@drawable/apik"
         tools:ignore="ContentDescription" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="67dp"
-        android:layout_height="59dp"
+        android:layout_width="@dimen/_67sdp"
+        android:layout_height="@dimen/_59sdp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2"
-        app:layout_constraintVertical_bias="0.461"
+        app:layout_constraintVertical_bias="0.392"
         app:srcCompat="@drawable/pemkab"
         tools:ignore="ContentDescription" />
 
@@ -89,14 +88,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="884dp" />
+        app:layout_constraintGuide_end="812dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.31" />
+        app:layout_constraintGuide_percent="0.23" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
@@ -110,19 +109,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.40384614" />
+        app:layout_constraintGuide_percent="0.47" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="648dp" />
+        app:layout_constraintGuide_begin="554dp" />
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="132dp"
-        android:layout_height="158dp"
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_120sdp"
         android:background="@drawable/menutata"
         android:onClick="rtrw"
         app:layout_constraintBottom_toBottomOf="@+id/button4"
@@ -134,8 +133,8 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="203dp"
-        android:layout_height="37dp"
+        android:layout_width="@dimen/_204sdp"
+        android:layout_height="@dimen/_37sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/button5"
         app:layout_constraintHorizontal_bias="0.419"
@@ -147,8 +146,8 @@
 
     <Button
         android:id="@+id/btnSop"
-        android:layout_width="242dp"
-        android:layout_height="47dp"
+        android:layout_width="@dimen/_242sdp"
+        android:layout_height="@dimen/_47sdp"
         android:background="@drawable/sopfront"
         android:onClick="pdfgo"
         app:layout_constraintBottom_toTopOf="@+id/imageView3"
