--- a/app/src/main/res/layout/activity_show_pdf.xml
+++ b/app/src/main/res/layout/activity_show_pdf.xml
@@ -6,66 +6,53 @@
     xmlns:tool="http://schemas.android.com/tools"
     android:background="@drawable/background">
 
-    <include
-        layout="@layout/menu_atas"
-        android:layout_width="157dp"
-        android:layout_height="44dp"
-        android:layout_alignBottom="@+id/txtPdf"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="254dp"
-        android:layout_marginBottom="126dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.151" />
-
     <ImageView
         android:id="@+id/imgApic"
-        android:layout_width="286dp"
-        android:layout_height="101dp"
+        android:layout_width="@dimen/_176sdp"
+        android:layout_height="@dimen/_35sdp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="69dp"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="26dp"
+        android:layout_marginStart="@dimen/_70sdp"
+        android:layout_marginTop="@dimen/_25sdp"
+        android:layout_marginEnd="@dimen/_26sdp"
         app:srcCompat="@drawable/apik"
         tool:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/txtPdf"
-        android:layout_width="280dp"
-        android:layout_height="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_30sdp"
         android:layout_below="@+id/imgApic"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/_15sdp"
         android:clickable="false"
         android:enabled="false"
         android:fontFamily="@font/arial"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="24sp"
+        android:textSize="@dimen/_15sdp"
         tool:text="FilePdf" />
 
     <com.github.barteksc.pdfviewer.PDFView
         android:id="@+id/pdfView"
-        android:layout_width="match_parent"
-        android:layout_height="501dp"
+        android:layout_width="399dp"
+        android:layout_height="540dp"
         android:layout_below="@+id/txtPdf"
         android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="4dp"
         android:layout_marginRight="5dp"
         android:layout_marginBottom="5dp" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_75sdp"
+        android:layout_height="@dimen/_64sdp"
         android:layout_below="@+id/pdfView"
+        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="@dimen/_250sdp"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:background="@drawable/back"
         android:onClick="kembali" />
 
