--- a/app/src/main/res/values/kecamatan.xml
+++ b/app/src/main/res/values/kecamatan.xml
@@ -11,6 +11,7 @@
         <item>Kecamatan Cimanggu</item>
         <item>Kecamatan Cipari</item>
         <item>Kecamatan Dayeuhluhur</item>
+        <item>Kecamatan Gandrungmangu</item>
         <item>Kecamatan Jeruklegi</item>
         <item>Kecamatan Kampung Laut</item>
         <item>Kecamatan Karangpucung</item>
