--- a/app/src/main/res/layout/activity_data_kecamatan.xml
+++ b/app/src/main/res/layout/activity_data_kecamatan.xml
@@ -36,23 +36,26 @@
 
     <Spinner
         android:id="@+id/spKecamatan"
-        android:layout_width="128dp"
-        android:layout_height="23dp"
+        android:layout_width="@dimen/_157sdp"
+        android:layout_height="@dimen/_27sdp"
         android:layout_marginStart="36dp"
         app:layout_constraintBottom_toBottomOf="@+id/txtPilihKecamatan"
         app:layout_constraintEnd_toStartOf="@+id/guideline14"
+        app:layout_constraintHorizontal_bias="0.923"
         app:layout_constraintStart_toEndOf="@+id/txtPilihKecamatan"
         app:layout_constraintTop_toTopOf="@+id/txtPilihKecamatan"
         app:layout_constraintVertical_bias="0.0" />
 
     <Spinner
         android:id="@+id/spPotensi"
-        android:layout_width="128dp"
-        android:layout_height="26dp"
+        android:layout_width="@dimen/_157sdp"
+        android:layout_height="@dimen/_27sdp"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="@+id/spKecamatan"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/spKecamatan"
-        app:layout_constraintTop_toTopOf="@+id/textView2" />
+        app:layout_constraintTop_toTopOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.23" />
 
     <TextView
         android:id="@+id/txtPilihKecamatan"
@@ -68,7 +71,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/guideline13"
         app:layout_constraintTop_toTopOf="@+id/guideline15"
-        app:layout_constraintVertical_bias="0.482"
+        app:layout_constraintVertical_bias="0.407"
         tools:ignore="HardcodedText" />
 
     <TextView
@@ -85,7 +88,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/txtPilihKecamatan"
         app:layout_constraintTop_toBottomOf="@+id/txtPilihKecamatan"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.202"
         tools:ignore="HardcodedText" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -114,7 +117,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.22" />
+        app:layout_constraintGuide_percent="0.25" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline17"
@@ -126,8 +129,8 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="405dp"
-        android:layout_height="602dp"
+        android:layout_width="400dp"
+        android:layout_height="574dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.473"
@@ -145,11 +148,11 @@
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/map"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.361"
-        tools:ignore="HardcodedText"/>
+        app:layout_constraintVertical_bias="0.74"
+        tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/btnPdf"
@@ -160,9 +163,11 @@
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/btnPeta"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.733"
         app:layout_constraintStart_toStartOf="@+id/guideline17"
         app:layout_constraintTop_toTopOf="@+id/btnPeta"
-        tools:ignore="HardcodedText"/>
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="HardcodedText" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabBack"
