--- a/app/src/main/res/layout/activity_kawasan_industri.xml
+++ b/app/src/main/res/layout/activity_kawasan_industri.xml
@@ -68,8 +68,8 @@
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="412dp"
-        android:layout_height="591dp"
+        android:layout_width="378dp"
+        android:layout_height="605dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.571"
@@ -87,5 +87,20 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline24"
         app:layout_constraintStart_toEndOf="@id/PilihKPI"
         app:layout_constraintTop_toTopOf="@id/PilihKPI" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="69dp"
+        android:layout_height="90dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="@+id/map"
+        app:layout_constraintEnd_toStartOf="@+id/guideline24"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/map"
+        app:layout_constraintVertical_bias="0.973"
+        app:srcCompat="@drawable/back"
+        android:onClick="balik"
+        android:focusable="true" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
